<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4" >

        <TextView
            android:id="@+id/createWorkoutDayTextView"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/dayLabelText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/createWorkoutMuscleGroupTextView"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/muscleGroupLabelText"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/createWorkoutDayField"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:ems="10" />

        <EditText
            android:id="@+id/createWorkoutMuscleGroupField"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:ems="10" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/createWorkoutCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_weight="0.5"
            android:text="@string/cancelButtonText" />

        <Button
            android:id="@+id/createWorkoutCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/createWorkoutButtonText" />
    </LinearLayout>

</LinearLayout>