<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dumbellss"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="0dp"
    tools:context="com.example.progressiveoverload.EditExercises.EditExercisesDetailFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2" >

        <TextView
            android:id="@+id/titleLabel"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/titleLabelText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/restLabel"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/restLabelText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/titleField"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/restGroupField"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </GridLayout>

    <Button
        android:id="@+id/selectExercisePhotoButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectExercisePhotoButtonText" />

    <ImageView
        android:id="@+id/exercisePhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="0.93"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/saveExerciseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveExerciseButtonText" />

</LinearLayout>