<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dumbellss"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="0dp"
    tools:context="com.example.progressiveoverload.SelectWorkout.SelectWorkoutsListFragment" >
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2" >

        <TextView
            android:id="@+id/lastWorkoutLabel"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/lastWorkoutLabelText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lastWorkoutField"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/lastPerformedFieldText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </GridLayout>
    
    <ListView
        android:id="@+id/workoutList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
     
    
     <Button
        android:id="@+id/startWorkoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/startWorkoutButtonText" />
    

</LinearLayout>
