<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dumbellss"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="0dp"
    tools:context="com.example.progressiveoverload.ViewStatistics.ViewStatisticsListFragment" >

    <ListView
        android:id="@+id/exerciseList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/plotTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/weightRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/weightRadioText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/repsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/repsRadioText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/workRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/workRadioText"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

</LinearLayout>